# Sandcastle

./: README.md  create_account_phase1.py  create_opportunity_phase1.py  delete_existing_records.py  pyproject.toml  sandcastle.py
sandcastle_pkg/: __init__.py  __main__.py
sandcastle_pkg/cli/: salesforce_cli.py
sandcastle_pkg/phase1/: create_account_phase1.py  create_account_relationship_phase1.py  create_contact_phase1.py  create_guest_user_contact.py  create_opportunity_phase1.py  create_other_objects_phase1.py  delete_existing_records.py  dummy_records.py
sandcastle_pkg/phase2/: update_lookups_phase2.py
sandcastle_pkg/utils/: __init__.py  bulk_utils.py  csv_utils.py  picklist_utils.py  record_utils.py
